[package]
name = "pyruvate"
version = "0.1.2"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
description = "graphical interface for the glucose library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pyruvate"
path = "src/main.rs"

[dependencies]
iced = "0.2.0"
iced_web = "0.3.0"
serde = "1.0.123"
glucose = "0.1.8"
async-std = "1.9.0"